webapp/src/styles/App.scss
@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap');
@import 'constants';
@import 'Header';

$triangle-color: #aaaaaa;

* {
  box-sizing: border-box;
  font-family: Montserrat, sans-serif;
}

html,
body,
#root,
.App {
  background-color: $background-color;
  margin: 0;
  width: 100%;
  height: 100%;
}

.clickable {
  cursor: pointer;
}

h1, .h1,
h2, .h2,
h3, .h3,
h4, .h4 {
  font-weight: normal;
}

h1,
.h1 {
  font-size: 2rem;
}

h2,
.h2 {
  font-size: 1.4rem;
}

a {
  cursor: pointer;
  color: $link-blue;
}

p.error,
span.error {
  color: $red;
}

button,
input {
  background: none;
  border: $border-style;
  border-radius: 0.25rem;

}

button {
  align-items: center;
  cursor: pointer;
  display: flex;
  min-height: 2em;
  transition: background-color 0.3s ease;

  &:hover:not(:disabled) {
    background-color: #dedede;
  }

  &:disabled {
    background-color: #eeeeee;
    color: gray;
  }

  &.warn {
    background-color: $red;
    color: white;
  }

  &.confirm {
    background-color: $final-dark-green;
    color: white;
  }
}

input[type="text"],
input[type="password"] {
  padding: 0.25em 0.5em;
}

.page {
  width: 100%;
  max-width: $content-width;
  margin: 2em auto 0;
}

.content-row {
  margin-top: 3em;
}

.no-results {
  padding: 2em;
  text-align: center;
}

.tile {
  background-color: white;
  box-shadow: $drop-shadow;
  border-radius: 0.25rem;
}

.table {
  $column-width-checkbox: 7%;
  $column-width-name: 35%;
  $column-width-other: 25%;
  $column-padding: 2%;

  .table-header {
    display: inline-block;
    font-size: 0.8em;

    button {
      text-align: left;
    }

    .sort-ascending,
    .sort-descending {
      align-items: center;
      display: flex;
      fill: $triangle-color;
      justify-content: space-between;
    }

    .sort-descending {
      svg.triangle {
        transform: rotate(180deg);
      }
    }
  }

  .actions-row {
    border-bottom: $border-style;
    border-top: $border-style;
    display: flex;
    padding: 0.5em;

    & > *:not(:first-child) {
      margin-left: 0.5em;
    }
  }

  .table-row {
    align-items: center;
    border-bottom: $border-style;
    display: flex;
    white-space: nowrap;

    .icon-container {
      display: inline-block;
      margin-right: 0.5em;

      svg {
        fill: $triangle-color;
      }
    }
  }

  .table-header > *,
  .table-row > * {
    display: inline-block;
    overflow: hidden;
    padding: 0.5em $column-padding 0.2em;
    &:first-child {
      width: $column-width-checkbox;
    }
    &:nth-child(2) {
      width: $column-width-name;
      border-left: $border-style;
    }
    &:nth-child(n+3) {
      width: $column-width-other;
      border-left: $border-style;
    }
  }
}

